# control-view

./: .gitignore  README.md  implementation_plan.md  pyproject.toml
artifacts/: geofence.yaml  mission_spec.yaml
configs/: backend_mavros.yaml  gemini_mcp.json  gemini_mcp_b0.json  gemini_mcp_b1.json  gemini_mcp_b3.json  gemini_mcp_debug.json  system.yaml
configs/experiments/: t1_high.yaml  t1_low.yaml  t1_medium.yaml  t2_spec_drift.yaml  t3_recovery.yaml
contracts/families/: arm.yaml  goto.yaml  hold.yaml  land.yaml  rtl.yaml  takeoff.yaml
contracts/fields/: battery.margin.yaml  estimator.health.yaml  failsafe.state.yaml  geofence.status.yaml  home.position.yaml  home.ready.yaml  mission.spec.rev.yaml  nav.progress.yaml  offboard.stream.ok.yaml  pose.local.yaml  tf.local_body.yaml  tool_registry.rev.yaml  vehicle.armed.yaml  vehicle.connected.yaml  vehicle.mode.yaml  velocity.local.yaml
docs/: experiments_ko.md  gemini_demo_prompt_b0_ko.md  gemini_demo_prompt_b1_ko.md  gemini_demo_prompt_common_en.md  gemini_demo_prompt_ko.md  gemini_prompt_b0.md  gemini_prompt_b0_raw_ros_ko.md  gemini_prompt_b1.md  gemini_prompt_b1_thin_transcript_ko.md  gemini_prompt_b3.md  gemini_prompt_b3_semantic_step_ko.md  gemini_prompt_common.md  runbook_ko.md
scripts/: export_gemini_metrics.py  live_fault_injector.py  patch_gemini_cli_mcp_structured.py  reset_live_stack.sh  run_experiment_matrix.py  run_gemini_headless_demo.sh  run_live_experiment_fresh.sh  run_live_experiments.py  run_mission.py  run_replay_experiments.py  run_sitl_smoke.sh
src/control_view/: __init__.py  app.py  (+3 more)
(+65 files in other folders)
